@@ -1,3 +1,8 @@
+2018-02-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/84341
+	* c-c++-common/gomp/pr84341.c: New test.
+
 2018-02-12  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/68746
