@@ -1,3 +1,9 @@
+2018-02-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/84341
+	* parser.c (cp_parser_binary_expression): Use build_min instead of
+	build2_loc to build the no_toplevel_fold_p toplevel binary expression.
+
 2018-02-12  Nathan Sidwell  <nathan@acm.org>
 
 	PR c++/84263
